--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,32 @@
+@import url(animate.min.css);
 @import url(fonts.css);
+@import url(chat.css);
 @import url(gift_box.css);
 @import url(message_happy_birthday.css);
+@import url(audios.css);
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 auto;
+}
+
+
+.content {
+  width: 98%;
+  margin: auto;
+}
+
+section {
+  width: 100%;
+  padding: 0;
+}
